<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <include layout="@layout/toolbar_actionbar" />

    <RelativeLayout
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/toolbar_actionbar"
        android:visibility="visible">

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/usernameinput"
            android:layout_marginBottom="4dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="63dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/username"
                android:ems="10"
                android:hint="@string/hint_username"

                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/usernameinput"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="16dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/passwordinput">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberPassword"
                android:ems="10"
                android:id="@+id/password"
                android:hint="@string/hint_password"
            />
        </android.support.design.widget.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/confirm_phone"
            android:id="@+id/title_confirm_phone"
            android:layout_below="@+id/passwordinput"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:textColor="@color/primary" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_confirm_phone"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="4dp"
            android:id="@+id/inputphone">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/phone"
                android:hint="@string/hint_confirm_phone" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_singup"
            android:id="@+id/button_login"
            android:layout_below="@+id/inputphone"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/btn_login"
            android:id="@+id/login_btn"
            android:layout_below="@+id/button_login"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            android:textColor="@color/primary" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/toolbar_actionbar"
        android:visibility="gone">


    </RelativeLayout>

    <TextSwitcher
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textSwitcher"
        android:layout_alignTop="@+id/signup"
        android:layout_toRightOf="@+id/login"
        android:layout_toEndOf="@+id/login"
        android:layout_marginLeft="317dp"
        android:layout_marginStart="317dp"
        android:layout_marginTop="158dp" />


</RelativeLayout>
